server/compilers/goLiteJS/src/test/ml2/valid/valreturn2.go
package main
//Return on a for true statement

func main() bool{
    var a bool = true;
    if a {
        return a;
    }else if a {
        return a;
    }else if a {
        return a
    }else {
        return a;
    }
}
