server/compilers/goLiteJS/src/test/ml2/invalid/invreturn1.go
package main
//Error: Not a complete return for if 

func main() bool{
    var a bool = true;
    if a {
        return true
    }
}
